@@ -1531,3 +1531,5 @@ Added -Dfseeko=fseek to MACH= line for linux, as fseeko(3) seems to be
 broken in current versions of Linux.  (Need to remove this later.)
 
 Rearranged struct's for better efficiency on 64-bit architectures.
+
+Added -i option to rlam so it works with binary input formats.
